// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfoSection Component should match snapshot with all props 1`] = `
<div>
  <div
    class="bg-white rounded-lg shadow-iw-layout p-6 sm:p-5 md:p-10 flex flex-col items-center justify-center min-h-[400px] sm:min-h-[450px] mt-4 sm:mt-8"
    data-testid="test-info-section-container"
  >
    <svg
      data-testid="mock-icon"
    />
    <div
      class="inline-flex flex-col items-center max-w-[370px]"
    >
      <h2
        class="text-xl text-center sm:text-2xl font-medium text-gray-800 mb-2"
        data-testid="test-info-section-title"
      >
        Test Title
      </h2>
      <span
        class="text-[var(--iw-color-info)] font-normal text-sm break-words justify-center text-center"
        data-testid="test-info-section-message"
      >
        Test Action Text
      </span>
    </div>
  </div>
</div>
`;

exports[`InfoSection Component should match snapshot with minimal props 1`] = `
<div>
  <div
    class="bg-white rounded-lg shadow-iw-layout p-6 sm:p-5 md:p-10 flex flex-col items-center justify-center min-h-[400px] sm:min-h-[450px] mt-4 sm:mt-8"
    data-testid="test-info-section-container"
  >
    <div
      class="inline-flex flex-col items-center max-w-[370px]"
    >
      <span
        class="text-[var(--iw-color-info)] font-normal text-sm break-words justify-center text-center"
        data-testid="test-info-section-message"
      >
        Test Action Text Only
      </span>
    </div>
  </div>
</div>
`;
